# Buffered-Packed-Memory-Array

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cmake_config.hpp.in  installParlaylib.bash  installTBB.bash
CPMA/: CMakeLists.txt  cpmaWrapper.hpp
CPMA/CPMA-test-repo/: CPMA.hpp
CPMA/CPMA-test-repo/EdgeMapVertexMap/AdjacencyMatrix/: BinaryAdjacencyMatrix.cpp
CPMA/CPMA-test-repo/EdgeMapVertexMap/algorithms/: BC.h  BFS.h  Components.h  PageRank.h
CPMA/CPMA-test-repo/StructOfArrays/: .gitignore  LICENSE  Makefile  README.md  aos.hpp  main.cpp  multipointer.hpp  soa.hpp
benchmark/: CMakeLists.txt  barrier.hpp  batchBlockSizeExperiment.cpp  batchOverallocationFactorExperiment.cpp  batchParallelBstBenchmark.cpp  batchParameterTuningExperiment.cpp  batchRandomDistributionBenchmark.cpp  batchRangeQueryBenchmark.cpp  benchmarks.hpp  cpmaBenchmark.cpp  createDistributionHistogram.cpp  thread_coordination.hpp
dataStructures/: CMakeLists.txt  batchedSparseArray.hpp  binaryRebalancingManager.hpp  block.hpp  blockSizeManager.hpp  concurrentBucketMap.hpp  densityManager.hpp  helpers.hpp  iterators.hpp  overallocatedBatchedSparseArray.hpp  overallocatedBlock.hpp  overallocationFactorManager.hpp  simpleOrderedSet.hpp  simpleUnorderedSet.hpp  typedefs.hpp
helpers/: CMakeLists.txt  assert.hpp  configuration.hpp  debugStream.hpp  definitions.hpp  inputGenerator.hpp  operationsGenerator.hpp  prefillGenerator.hpp  profiler.hpp  progress.hpp  randomDistributions.hpp  timer.hpp  zipfian_int_distribution.h
parallelBST/: CMakeLists.txt  btree.h  btree_types.h  bulk_operations_data_structure.h  fast_list.h  join_data_structure.h  memory.h  numeric.h  parallelBstWrapper.h  print.h  split_data_structure.h  thread_pool.h  tree_joiner.h
scripts/: createDistributionHistograms.bash  generateParameterTuningCode.bash
scripts/distributions/: batchBlockSizeInfluenceDistributions.bash  batchDataStructureSizeInfluenceDistributions.bash  batchOverallocationFactorDistributions.bash  batchStrongScaling_64threads_large_distributions.bash  batchStrongScaling_64threads_large_distributions_all.bash  batchStrongScaling_64threads_large_distributions_cpma.bash  batchStrongScaling_64threads_large_distributions_parallelBST.bash
scripts/finalExperiments/: runAllInsertionNoProfiler.bash  runAllInsertionSequentialProfiler.bash
scripts/finalExperiments/insertion/noProfiler/: batchBatchSizeExperiment-remaining.bash  batchBatchSizeExperiment.bash  batchDataStructureSizeInfluence.bash  batchStrongScaling_64threads_large_distributions.bash  batchStrongScaling_64threads_large_distributions_all.bash  batchStrongScaling_64threads_large_distributions_cpma.bash  batchStrongScaling_64threads_large_distributions_parallelBST.bash  batchStrongScaling_64threads_small_distributions.bash  batchStrongScaling_64threads_small_distributions_all.bash  batchStrongScaling_64threads_small_distributions_cpma.bash  batchStrongScaling_64threads_small_distributions_parallelBST.bash  batchWeakScalingDistributions.bash  rangeQueryExperiment.bash
scripts/finalExperiments/insertion/sequentialProfiler/: batchStrongScaling_64threads_large_distributions.bash
scripts/finalExperiments/insertionOverallocated/: runAll.bash
scripts/finalExperiments/insertionOverallocated/noProfiler/: batchBlockSizeExperiment.bash  batchStrongScalingExperiment-remaining.bash  batchStrongScalingExperiment.bash
scripts/finalExperiments/insertionOverallocated/sequentialProfiler/: batchOverallocationFactorExperiment.bash
scripts/finalExperiments/scanConfiguration/noProfiler/: batchStrongScaling_64threads_large_distributions_scan.bash
scripts/parameterTuning/: parameterTuning.bash
scripts/range/: profiledRangeQueryExperiment.bash  rangeQueryExperiment.bash
tests/: CMakeLists.txt  batchedSparseArrayTest.cpp
